# goaldriveclaudecode

./: .env.example  .gitignore  README.md  ai_limitations.txt  core_capabilities.md  pyproject.toml
.github/: README.md
20/: identity.md
src/goaldriveclaude/: __init__.py  __main__.py  cli.py  config.py
src/goaldriveclaude/agents/: __init__.py  reviewer_verification.py  worker.py
src/goaldriveclaude/core/: __init__.py  graph.py  models.py  state.py
src/goaldriveclaude/nodes/: __init__.py  coordinator.py  error_recovery.py  evaluator.py  executor.py  global_verifier.py  goal_analyzer.py  human_input.py  planner.py  supervisor.py  verifier.py
src/goaldriveclaude/prompts/: __init__.py  evaluation.py  execution.py  goal_analysis.py  planning.py  verification.py
src/goaldriveclaude/tools/: __init__.py  code_analysis.py  filesystem.py  python_exec.py  shell.py  verification.py
src/goaldriveclaude/utils/: __init__.py  display.py  json_utils.py  logger.py  session.py
tests/: conftest.py  test_goal_lifecycle.py  test_graph.py  test_json_utils.py  test_multi_agent.py  test_nodes.py  test_planner_classification.py  test_tools.py
