[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goaldriveclaude"
version = "0.1.0"
description = "GoalDriveClaude - 基于 LangGraph 的目标驱动型终端 Agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GoalDriveClaude Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[project.scripts]
goaldriveclaude = "goaldriveclaude.cli:main"

[project.urls]
Homepage = "https://github.com/goaldriveclaude/goaldriveclaude"
Repository = "https://github.com/goaldriveclaude/goaldriveclaude"

[tool.hatch.build.targets.wheel]
packages = ["src/goaldriveclaude"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
